--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "serve": "node index",
     "start": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client" 
+    "heroku-postbuild": "cd client && yarn add && yarn build" 
   },
   "keywords": [],
   "author": "",
