--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "serve": "node index.js",
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false cd client && yarn install && yarn build",
-    "local-prod": "yarn clean && yarn install && yarn build && heroku local"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false cd client && yarn install && yarn build"
   },
   "keywords": [],
   "author": "",
