--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.13",
     "nodemon": "^2.0.7"
+  },
+  "engines": {
+    "node": "15.2.1",
+    "yarn": "1.22.10"
   }
 }
